--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "postgres",
-    "password": "postgres",
+    "password": "Harshasri",
     "database": "todo_l6",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "postgres",
+    "password": "Harshasri",
     "database": "todo_l6_test",
     "host": "127.0.0.1",
     "dialect": "postgres",
