--- a/config/config.json
+++ b/config/config.json
@@ -1,13 +1,13 @@
 {
   "development": {
-    "username": "postgres",
+    "username": "Harshasri",
     "password": "Harshasri",
     "database": "todo_l6",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "postgres",
+    "username": "Harshasri",
     "password": "Harshasri",
     "database": "todo_l6_test",
     "host": "127.0.0.1",
